--- a/main.html
+++ b/main.html
@@ -41,7 +41,14 @@
       }
     </style>
 
-    <ul></ul>
+   <ul id="band">
+  <li>The Beatles</li>
+  <li>Led Zeppelin</li>
+  <li>Aerosmith</li>
+  <li>Red Hot Chili Peppers</li>
+<li>The Rolling Stones</li>
+</ul>
+
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
